@@ -6,8 +6,8 @@ DIST calcboot-3.83.0.tar.bz2 144076 RMD160 758be59ca9576b0632da003cf05a691eefd6c
 DIST syslinux-3.75.tar.bz2 3110916 RMD160 05e5202649bbf4c8835df41cd797cd452de65a76 SHA1 8b97a708c1dc8bcb0505fab59b143368ed25b60b SHA256 1161ef0c248b931a872b92b9fe29a1ad54be2428976f19b8d88a8aa95cb3d65f
 DIST syslinux-3.82.tar.bz2 3086896 RMD160 67f15d5436be9697065bfd52de6a864d7aed742a SHA1 e949b13e0ef016ec39f7dafacac722936756f41b SHA256 1dbbf8cfd10fc07187fa8bfede23639fc95314976730f3474cb349e8bf6c6f61
 DIST syslinux-3.83.tar.bz2 3184349 RMD160 b4cff023c44a421a5f788f4cf556b537986117f9 SHA1 0dbbdd5a36362ce0e3284d9f4047a355d527d5d0 SHA256 9ec84d6dcc188f082a875b69796b196f98ea8c0102b55b03123616a285c2d9f9
-EBUILD calcboot-3.75.4-r1.ebuild 1601 RMD160 8971ae4b694ef27b0a815b09933a8ae0c96e671c SHA1 6e641b5b202099acd0919dbbddc50375db14de06 SHA256 c53c332fc0d7e460cb2190aae916e1c1125de666d1671f9af7cc63c97f3f8934
-EBUILD calcboot-3.82.0-r1.ebuild 1600 RMD160 06be73aa11ac01867083f9b307044118708aa1e9 SHA1 21ca9d04e485a3dfda12b6d53bccfb856a033855 SHA256 2d065d9fa43c4f958de525c45c6943bdb6da6ca4bf79ddfcb1edbca541c562fe
-EBUILD calcboot-3.83.0.ebuild 1600 RMD160 06be73aa11ac01867083f9b307044118708aa1e9 SHA1 21ca9d04e485a3dfda12b6d53bccfb856a033855 SHA256 2d065d9fa43c4f958de525c45c6943bdb6da6ca4bf79ddfcb1edbca541c562fe
-MISC ChangeLog 485 RMD160 ab2d0061b8854259a0efdc670ca8f397315c12d3 SHA1 0ea5cd2173d14c8465e0607ed2d7041cda6477f6 SHA256 eff4fac9cc9946c1aec79f329bededef44bc415b7f6ef3477171f1b82c4d8cd1
+EBUILD calcboot-3.75.4-r1.ebuild 1591 RMD160 a73bbd08a9ca02244782661ec7a6fd22ab28c35b SHA1 27323c3fe2d888efb24b41c85ce69cf054a5501d SHA256 239a326e6bc3f9c7d0454f40851006e1dbf05b1bfb3ec95939e6230413f83c28
+EBUILD calcboot-3.82.0-r1.ebuild 1590 RMD160 d104ae3d37be8304e054f3738f48b3ec0a057526 SHA1 02c19e345329b450f88b9f891143b1a1820bf082 SHA256 e9fa3c4c4f743494758959a115ee660f16576221ed8b3db1beb356488dda04fc
+EBUILD calcboot-3.83.0.ebuild 1590 RMD160 d104ae3d37be8304e054f3738f48b3ec0a057526 SHA1 02c19e345329b450f88b9f891143b1a1820bf082 SHA256 e9fa3c4c4f743494758959a115ee660f16576221ed8b3db1beb356488dda04fc
+MISC ChangeLog 661 RMD160 8c35bb16403da110acb77e1ef2baf9b7582c2d8e SHA1 8356b96503e709e70e660edba92872e7d0fa4813 SHA256 e98890df3b93240afad70487d00994d2c4d34b2c569c4de71a74c7d993e6bf68
 MISC metadata.xml 252 RMD160 e886f2ac14de406bbadb647631df7b3de928794e SHA1 ea46203f8029e9877a5656756196cf6fa4643594 SHA256 4352693c8bde260bfcdaad19c5e9f5e116ae56492f1223d4b3c713b4c24a1997
