@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
+  calcboot-3.75.4-r1.ebuild, calcboot-3.82.0-r1.ebuild,
+  calcboot-3.83.0.ebuild:
+  Change description of calcboot.
+
 *calcboot-3.83.0 (24 Nov 2009)
 
   24 Nov 2009; Mike Hirecky (mhiretskiy) <mh@calculate.ru>
